Apply bulma as it should be

--- a/src/UI/Http/Web/templates/base.html.twig
+++ b/src/UI/Http/Web/templates/base.html.twig
@@ -9,51 +9,8 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar is-fixed-top">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="/">
-                    <h2>DEMO</h2>
-                </a>
-                <div class="navbar-burger burger" data-target="nav">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-            <div id="nav" class="navbar-menu">
-                <div class="navbar-start">
-                    <div class="navbar-item has-dropdown is-hoverable">
-                        <a class="navbar-link">
-                            Docs
-                        </a>
-                        <div class="navbar-dropdown is-boxed">
-                            <a class="navbar-item" href="/">
-                                Overview
-                            </a>
-                            <a class="navbar-item" href="/">
-                                Modifiers
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="navbar-end">
-                    <div class="navbar-item">
-                        <div class="field is-grouped">
-                            <p class="control">
-                                {% if not is_granted('ROLE_USER') %}
-                                    <a class="button is-primary" href="{{ path('sign-up') }}">Sign up</a>
-                                    <a class="button is-primary" href="{{ path('login') }}">Sign in</a>
-                                {% else %}
-                                    <b>{{ app.user.username }}</b> 
-                                    <a class="button is-danger" href="{{ path('logout') }}">Exit</a>
-                                {% endif %}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        {% include 'components/header/menu.html.twig' only %}
+        <br>
         <section class="section">
             {% block body %}{% endblock %}
         </section>
