--- a/src/UI/Http/Web/templates/profile/index.html.twig
+++ b/src/UI/Http/Web/templates/profile/index.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 <div class="container">
-    <div class="columns">
-        <div class="column">
+    <div class="columns is-centered">
+        <div class="column is-half">
             <h2>Hi</h2> {{ app.user.username }}
         </div>
     </div>
