--- a/src/UI/Http/Web/templates/signin/login.html.twig
+++ b/src/UI/Http/Web/templates/signin/login.html.twig
@@ -2,27 +2,29 @@
 
 {% block body %}
     <div class="container">
-        <div class="columns">
-            <div class="column">
+        <div class="columns is-centered">
+            <div class="column is-half">
                 {% if error %}
                     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
                 <form action="{{ path('login') }}" method="post">
-                    <label for="username">Username:</label>
-                    <div class="control">
-                        <input class="input" type="text" id="username" name="_email" value="{{ last_username }}" />
+                    <div class="field">
+                        <label for="username">Username:</label>
+                        <div class="control">
+                            <input class="input" type="text" id="username" name="_email" value="{{ last_username }}" />
+                        </div>
                     </div>
-                    <label for="password">Password:</label>
-                    <div class="control">
-                        <input class="input" type="password" id="password" name="_password" />
+                    <div class="field">
+                        <label for="password">Password:</label>
+                        <div class="control">
+                            <input class="input" type="password" id="password" name="_password" />
+                        </div>
                     </div>
-                    {#
-                        If you want to control the URL the user
-                        is redirected to on success (more details below)
-                        <input type="hidden" name="_target_path" value="/account" />
-                    #}
-
-                    <button class="button is-link" type="submit">Sign in</button>
+                    <div class="field">
+                        <div class="control">
+                            <button class="button is-link" type="submit">Sign in</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
