--- a/src/UI/Http/Web/templates/signup/user_created.html.twig
+++ b/src/UI/Http/Web/templates/signup/user_created.html.twig
@@ -2,9 +2,8 @@
 
 {% block body %}
 <div class="container">
-
-    <div class="row">
-        <div class="column-50 column-offset-25">
+    <div class="columns is-centered">
+        <div class="column is-half">
             <h2>Hello {{ email }}</h2>
             <i>Your id is {{ uuid }}</i>
         </div>
