[WIP] Form example

--- a/src/UI/Http/Web/templates/base.html.twig
+++ b/src/UI/Http/Web/templates/base.html.twig
@@ -17,15 +17,11 @@
         {% block javascripts %}{% endblock %}
         <script>
           document.addEventListener('DOMContentLoaded', function () {
-            // Get all "navbar-burger" elements
-            var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
-            // Check if there are any navbar burgers
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
             if ($navbarBurgers.length > 0) {
-              // Add a click event on each of them
               $navbarBurgers.forEach(function ($el) {
                 $el.addEventListener('click', function () {
-                  var $target = document.getElementById($el.dataset.target);
-                  // Toggle the class on both the "navbar-burger" and the "navbar-menu"
+                  const $target = document.getElementById($el.dataset.target);
                   $el.classList.toggle('is-active');
                   $target.classList.toggle('is-active');
                 });
